--- a/Diplomka/Content/CSS/Cover.css
+++ b/Diplomka/Content/CSS/Cover.css
@@ -49,7 +49,7 @@ body {
     align-items: center;
     flex-direction: row;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 25px;
 }
 
     .menu li {
@@ -82,7 +82,7 @@ body {
     align-items: center;
     flex-direction: row;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 25px;
 }
 
     .user-menu li {
@@ -111,6 +111,6 @@ body {
     justify-content: center;
     align-items: flex-end;
     color: rgb(250, 255, 0);
-    font-size: 1.4em;
+    font-size: 20px;
     color: blue;
 }
