fix CSS by https://goo.gl/HDtBMs-good developer

--- a/Diplomka/Content/CSS/Cover.css
+++ b/Diplomka/Content/CSS/Cover.css
@@ -1,120 +1,140 @@
 ﻿* {
     box-sizing: border-box;
     word-wrap: break-word;
+    outline: none;
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 
-body * {
-    /*border:1px solid red;*/
+body,
+html {
+    min-height: 100vh;
 }
 
 body {
-        margin: 0;
+    margin: 0;
+    position: relative;
 }
 
 .wrapper {
-        width: 100%;
-        height: 100vh;
-        position: relative;
-        background: url('../Image/image.jpg') no-repeat center;
-        background-size: cover;
+    min-height: 100vh;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
 }
 
-.main {
-        position: absolute;
-        left: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        opacity: .9;
-        z-index: 0;
-        background-image: -webkit-linear-gradient(60deg, rgb(136,211,206) 0%, rgb(110,69,226) 100%);
-        background-image: -o-linear-gradient(60deg, rgb(136,211,206) 0%, rgb(110,69,226) 100%);
-        background-image: linear-gradient(150deg, rgb(136,211,206) 0%, rgb(110,69,226) 100%);
+.back {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.9;
+    background-image: -webkit-linear-gradient(60deg, rgb(136, 211, 206) 0%, rgb(110, 69, 226) 100%);
+    background-image: -o-linear-gradient(60deg, rgb(136, 211, 206) 0%, rgb(110, 69, 226) 100%);
+    background-image: linear-gradient(150deg, rgb(136, 211, 206) 0%, rgb(110, 69, 226) 100%);
+}
+
+.picture {
+    background: url(../Image/image.jpg) no-repeat center;
+    background-size: cover;
+    position:absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.9;
 }
 
 .header {
-        display: flex;
-        width: 95%;
-        height: 10vh;
-        justify-content: space-between;
-        position: relative;
-        z-index: 2;
-        font-family: Lobster,cursive;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 2;
+    font-family: Lobster, cursive;
+    padding: 35px 40px;
 }
 
 .menu {
-        flex-flow: row wrap;
-        display: flex;
-        flex-basis: 40%;
-        align-items: center;
-        flex-direction: row;
-        text-align: center;
-        font-size: 25px;
+    flex-flow: row wrap;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-align: center;
+    font-size: 25px;
 }
 
-.menu li {
+    .menu li {
         display: flex;
-        flex: 1;
         color: white;
         justify-content: space-around;
         list-style: none;
-}
+        margin-right: 40px;
+        padding:5px;
+    }
 
-.menu a {
+        .menu li:last-child {
+            margin-left: 0;
+        }
+
+    .menu a {
         text-decoration: none;
         color: #fff;
-        flex: 1;
         text-align: center;
-}
+    }
 
-.menu li:hover {
-        background: -moz-linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
-        background: -webkit-linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
-        background: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
-        text-shadow:0 0 3px black;
+    .menu li:hover {
+        /*background: -moz-linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1));
+        background: -webkit-linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1));
+        background: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1));*/
+        text-shadow: 0 0 3px black;
     }
 
 .user-menu li :hover {
-    background: -moz-linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
-    background: -webkit-linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
-    background: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1));
+    /*background: -moz-linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1));
+    background: -webkit-linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1));
+    background: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1));*/
     text-shadow: 0 0 3px black;
 }
 
 .user-menu {
-        flex-flow: row wrap;
-        display: flex;
-        flex-basis: 30%;
-        align-items: center;
-        flex-direction: row;
-        text-align: center;
-        font-size: 25px;
+    flex-flow: row wrap;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-align: center;
+    font-size: 25px;
 }
 
-.user-menu li {
-        display: flex;
-        flex: 1;
+    .user-menu li {
         color: white;
-        justify-content: space-around;
         list-style: none;
         display: block;
-}
+        margin-right: 40px;
+    }
 
-.user-menu a {
-        text-wrap:none;
+        .user-menu li:last-child {
+            margin-right: 0;
+        }
+
+    .user-menu a {
         text-decoration: none;
         color: #fff;
-        flex: 1;
         display: block;
-}
+        padding:5px;
+    }
 
-.footer {
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        color: rgb(250, 255, 0);
-        font-size: 20px;
-        color: blue;
+@media only screen and (max-width: 650px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu {
+        margin-bottom: 25px;
+    }
 }
 
 .content {
@@ -122,12 +142,18 @@ body {
     display: flex;
     align-items: center;
     text-align: center;
+    justify-content: space-around;
     flex-direction: column;
+    flex: 1 0 auto;
 }
-
 
 .form {
     width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-translate {
@@ -137,6 +163,7 @@ body {
     text-align: center;
     margin: 10px;
     border-radius: 40px;
+    background-color: #Fff;
 }
 
 .btn-translate {
@@ -144,4 +171,13 @@ body {
     height: 30px;
     background-color: blue;
     color: white;
+    cursor: pointer;
+}
+
+.footer {
+    display:flex;
+    flex: 1 0 auto;
+    justify-content:center;
+    font-size:larger;
+    /* http://dimox.name/press_footer_bottom_with_css/ */
 }
