--- a/Diplomka/Views/Shared/_Cover.cshtml
+++ b/Diplomka/Views/Shared/_Cover.cshtml
@@ -9,11 +9,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="main">
             <div class="header">
                 <ul class="menu">
-                    <li>@Html.ActionLink("Home","Index","Home",null,new { @class ="hov"})</li>
-                    <li>@Html.ActionLink("Translate", "Translate", "Home",null, new { @class = "hov" })</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "hov" })</li>
+                    <li>@Html.ActionLink("Translate", "Translate", "Home", null, new { @class = "hov" })</li>
                     <li>@Html.ActionLink("Grammar", "Grammar", "Home", null, new { @class = "hov" })</li>
                 </ul>
 
@@ -26,9 +25,10 @@
                 @RenderBody()
             </div>
             <div class="footer">
-                v1.1.0.1
+                v1.2.0.1
             </div>
-        </div>
     </div>
+    <div class="picture"></div>
+    <div class="back"></div>
 </body>
 </html>
