added registration form and edited translate

--- a/Diplomka/Views/Home/Translate.cshtml
+++ b/Diplomka/Views/Home/Translate.cshtml
@@ -1,19 +1,21 @@
 ﻿@model string
 @{
-     ViewBag.Title = "Translate";
+    ViewBag.Title = "Translate";
 }
 
 @using (Html.BeginForm("Translate", "Home", FormMethod.Post, new { @class = "form" }))
 {
     @Html.Label("Enter your word:")
     <br />
-    @Html.TextBox("Word", null, new { @class = "form-translate", placeholder = "Enter your word here" })
-    <br/>
+    @Html.TextBox("Word", null, new { @class = "form-translate", placeholder = "Enter your word here", @required = "true" })
+    <br />
     <input class="btn-translate" type="submit" value="Translate" />
 }
-<p style="font-size:larger; color:red">
-    @if(@Model!=null)
-    {
+
+@if (@Model != null)
+{
+    <div class="end-translate">
         @Model
-    }
-</p>
+    </div>
+}
+
