--- a/Diplomka/Content/CSS/Cover.css
+++ b/Diplomka/Content/CSS/Cover.css
@@ -132,18 +132,19 @@ body {
 }
 
 .content {
-    height: 80vh;
+    height: 79vh;
     display: flex;
     align-items: center;
     text-align: center;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
+    justify-content:center;
     flex-direction: column;
     flex: 1 0 auto;
 }
 
 .form {
     width: 100%;
-    height: 300px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -167,10 +168,20 @@ body {
     color: white;
     cursor: pointer;
 }
+.end-translate {
+    height: 30px;
+    font-size: larger;
+    color: red;
+    position: relative;
+    width: 25%;
+    background-color:deepskyblue;
+    display:block;
+    opacity:0.7;
+}
 
 .footer {
-    display:flex;
+    display: flex;
     flex: 1 0 auto;
-    justify-content:center;
-    font-size:larger;
+    justify-content: center;
+    font-size: larger;
 }
