--- a/Diplomka/Views/Shared/_Cover.cshtml
+++ b/Diplomka/Views/Shared/_Cover.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/Content/CSS/Cover.css" />
+    <link rel="stylesheet" href="~/Content/Page/Cover.css" />
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
