--- a/Diplomka/Content/User/CSS/Login/Login.css
+++ b/Diplomka/Content/User/CSS/Login/Login.css
@@ -4,15 +4,13 @@
 }
 
 .bg {
-    background: url('/Content/User/Images/image.jpg') no-repeat;
+    background: url('/Content/User/Images/image.jpg') no-repeat center;
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
     background-size: 100% 100vh;
-    max-width: 100%;
-    min-height: 100vh;
-    min-width: 285px;
+    position:absolute;
 }
 
 .form-container {
