--- a/Diplomka/Content/User/CSS/Registration/Registration.css
+++ b/Diplomka/Content/User/CSS/Registration/Registration.css
@@ -1,39 +1,70 @@
-﻿input {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+﻿* {
     box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    word-wrap: break-word;
 }
 
-.present {
+.bg {
+    background: url('/Content/User/Images/Reg-Image.png') no-repeat center center fixed;
+    background-size: cover;
+    min-height: 100vh;
+}
+
+.form-container {
+    padding: 50px 60px;
+    margin-top: 12vh;
+    -webkit-box-shadow: -1px 4px 26px 11px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 4px 26px 11px rgba(0,0,0,0.75);
+    box-shadow: -1px 4px 26px 11px rgba(0,0,0,0.75);
+    min-width: 250px;
+    font-size: 20px;
+    color: rgb(102, 0, 102);
+    text-shadow: 0 0 0.5px #000;
+}
+
+h1 {
     text-align: center;
-    font-size: 2em;
 }
 
-input[type=submit] {
-    background-color: #4CAF50;
+input {
+    width: 100%;
+    border: 2px solid #aaa;
+    border-radius: 4px;
+    margin: 8px 0;
+    outline: none;
+    box-sizing: border-box;
+    transition: .3s
+}
+
+    input:focus {
+        border-color: rgb(255, 153, 51);
+        box-shadow: 0 0 8px 0 rgb(255, 153, 51);
+    }
+
+.IconInput input {
+    padding-left: 35px;
+}
+
+.IconInput {
+    position: relative;
+}
+
+    .IconInput i {
+        position: absolute;
+        left: 0;
+        top: 1px;
+        background-color: rgb(118, 104, 130);
+        color: #fff;
+        transition: .3s;
+        padding: 7px 4px;
+        border-radius: 4px 0 0 4px;
+    }
+
+    .IconInput input:focus + i {
+        color: #fff);
+        background-color: rgb(255, 153, 51);
+    }
+
+.btn {
+    background-color: rgb(255, 153, 51);
     color: white;
-    cursor: pointer;
-    font-size: 15px;
-}
-
-input[type=submit]:hover {
-        background-color: #069f06;
-}
-
-.button {
-        font-size: 15px;
-        text-decoration: none;
-        border: solid grey 1px;
-        background-color: firebrick;
-        color: navajowhite;
-        padding: 6px;
-        border-radius: 4px;
-        float: right;
-        width: 200px;
-        text-align: center;
-        margin: 15px
 }
