--- a/Diplomka/Views/User/Registration.cshtml
+++ b/Diplomka/Views/User/Registration.cshtml
@@ -4,30 +4,61 @@
 }
 
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Registration</title>
-    <link rel="stylesheet" href="~/Content/User/CSS/Registration/Registration.css"/>
-    <link rel="stylesheet" href="~/Content/User/CSS/Validation.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="~/Content/User/CSS/Registration/Registration.css">
+    <link href="~/Content/User/CSS/Validation.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h2 class="present">Registration</h2>
-    @using (Html.BeginForm())
-    {
-        <b>@Html.LabelFor(x => x.Email):</b>
-        @Html.EditorFor(x => x.Email, new { htmlAttributes = new { placeholder = "Enter Email", @required = "true", @class = "Email" } })
-        @Html.ValidationMessageFor(x => x.Email)
-        <br />
-        <b>@Html.LabelFor(x => x.Password):</b>
-        @Html.EditorFor(x => x.Password, new { htmlAttributes = new { placeholder = "Enter Password", @required = "true", @type = "password" } })
-        @Html.ValidationMessageFor(x => x.Password)
-        <br />
-        <b>@Html.LabelFor(x => x.PasswordConfirm)</b>
-        @Html.EditorFor(x => x.PasswordConfirm, new { htmlAttributes = new { placeholder = "Repeat Password", @required = "true", @type="password" } })
-        @Html.ValidationMessageFor(x => x.PasswordConfirm)
-        <br />
-    }
+    <div class="bg">
+        <div class="container-fluid">
+            <div class="row">
+                
+                <div class="col-md-4 col-sm-4 col-xs-12"></div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                   <div class="form-container">
+                            @using (Html.BeginForm())
+                            {
+                                <h1>Sign Up</h1>
+                                <div class="form-group">
+                                    <b>@Html.LabelFor(x => x.Email):</b>
+                                    <div class="IconInput">
+                                        @Html.EditorFor(x => x.Email, new { htmlAttributes = new { placeholder = "Email", @required = "true" } })
+                                        <i class="fa fa-user fa-lg fa-fw" aria-hidden="true"></i>
+                                    </div>
+                                    @Html.ValidationMessageFor(x => x.Email)
+                                </div>
+                                <div class="form-group">
+                                    <b>@Html.LabelFor(x => x.Password):</b>
+                                    <div class="IconInput">
+                                        @Html.EditorFor(x => x.Password, new { htmlAttributes = new { placeholder = "Password", @required = "true" } })
+                                        <i class="fa fa-lock fa-lg fa-fw" aria-hidden="true"></i>
+                                    </div>
+                                    @Html.ValidationMessageFor(x => x.Password)
+                                </div>
+                                <div class="form-group">
+                                    <b>@Html.LabelFor(x => x.PasswordConfirm)</b>
+                                    <div class="IconInput">
+                                        @Html.EditorFor(x => x.PasswordConfirm, new { htmlAttributes = new { placeholder = "Password", @required = "true" } })
+                                        <i class="fa fa-lock fa-lg fa-fw" aria-hidden="true"></i>
+                                    </div>
+                                    @Html.ValidationMessageFor(x => x.PasswordConfirm)
+                                </div>
+                                <button type="submit" class="btn  btn-block">Registration</button>
+                            }
+                        </div>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
